# local-ai-coding-agent

./: .gitignore  ARCHITECTURE.md  CAPABILITY_ENVELOPE.md  CONTRIBUTING.md  ERRATA.md  EXAMPLES.md  Makefile  README.md  USER_GUIDE.md  exercism_32b_coder_analysis.md  humaneval_32b_coder_analysis.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
benchmarks/: aider_exercism_32b_t900.json  aider_tool_bench.py  bare_probe.py  bare_probe_results.json  bare_probe_withtest_22.json  generate_exercism.py  generate_humaneval.py  probe_targets.txt  probe_targets_passed.txt  run_batches.py  swe_bench_example.json  swe_bench_runner.py
benchmarks/results/: README.md  aider_exercism_32b.json  aider_exercism_7b.json  aider_humaneval_iter.json
benchmarks/tasks/: Exercism_affine-cipher.py  Exercism_beer-song.py  Exercism_book-store.py  Exercism_bottle-song.py  Exercism_bowling.py  Exercism_connect.py  Exercism_dominoes.py  Exercism_dot-dsl.py  Exercism_food-chain.py  Exercism_forth.py  Exercism_go-counting.py  Exercism_grade-school.py  Exercism_grep.py  Exercism_hangman.py  Exercism_list-ops.py  Exercism_paasio.py  Exercism_phone-number.py  Exercism_pig-latin.py  Exercism_poker.py  Exercism_pov.py  Exercism_proverb.py  Exercism_react.py  Exercism_rest-api.py  Exercism_robot-name.py  Exercism_scale-generator.py  Exercism_sgf-parsing.py  Exercism_simple-linked-list.py  Exercism_transpose.py  Exercism_tree-building.py  Exercism_two-bucket.py  Exercism_variable-length-quantity.py  Exercism_wordy.py  Exercism_zebra-puzzle.py  Exercism_zipper.py  HumanEval_0.py  HumanEval_1.py  HumanEval_10.py  HumanEval_100.py  HumanEval_101.py  HumanEval_102.py  (+160 more)
demo/: README.md
src/agent/: __init__.py  context.py  customizations.py  errors.py  fsm.py  logging.py  memory.py  (+4 more)
tests/: conftest.py
vscode-extension/: .gitignore  .vscodeignore  LICENSE  README.md  ai-coding-agent-0.1.0.vsix  package-lock.json  package.json
(+83 files in other folders)
