[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coding-agent"
version = "0.1.0"
description = "Local-first AI Coding Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "docker>=7.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
web = [
    "aiohttp>=3.9",
]
security = [
    "bashlex>=0.18",
]
lsp = [
    "python-lsp-server[pyflakes,pycodestyle]>=1.9",
]
treesitter = [
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-bash>=0.21",
    "tree-sitter-powershell>=0.24",
    "tree-sitter-c-sharp>=0.21",
    "tree-sitter-rust>=0.21",
    "tree-sitter-ruby>=0.21",
    "tree-sitter-c>=0.21",
    "tree-sitter-cpp>=0.21",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-bash>=0.21",
    "tree-sitter-powershell>=0.24",
    "tree-sitter-c-sharp>=0.21",
    "tree-sitter-rust>=0.21",
    "tree-sitter-ruby>=0.21",
    "tree-sitter-c>=0.21",
    "tree-sitter-cpp>=0.21",
    "python-lsp-server[pyflakes,pycodestyle]>=1.9",
    "aiohttp>=3.9",
    "bashlex>=0.18",
]

[project.scripts]
ai-agent = "agent.cli.main:app"
agent = "agent.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
